plugins/kotlin/idea/tests/testData/highlighterMetaInfo/focusMode/SimpleClassInFunction.kt.highlighting
// FIR_IDENTICAL
// CHECK_SYMBOL_NAMES
// HIGHLIGHTER_ATTRIBUTES_KEY
class SimpleClassInFunction {
    fun <!HIGHLIGHTING("severity='SYMBOL_TYPE_SEVERITY'; highlightingTextAttributesKey='KOTLIN_FUNCTION_DECLARATION'")!>foo<!>() {

    }

    fun bar() {
    }
}
